[project]
name = "flet-aulas"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Medeiro",email = "r.medeiro10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flet (>=0.28.3,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
